# fluss

./: .gitignore  .gitlab-ci.yml  CNAME  Dockerfile  README.md  index.html
.github/workflows/: build.yml  deploy.yml  node.yml  rust.yml  wasm.yml
_snowpack/pkg/: clsx.js  import-map.json  ramda.js  react.js
_snowpack/pkg/@react-aria/: button.js  focus.js  interactions.js  switch.js  textfield.js  visually-hidden.js
_snowpack/pkg/@react-stately/: toggle.js
_snowpack/pkg/common/: clsx.m-e1755476.js  module-24c545cc.js  module-9a1491c0.js
app/: .eslintrc.json  App.vue  index.css  index.html  package-lock.json  package.json  snowpack.config.js  tsconfig.json  vite.config.ts
app/components/: Fluss.vue  Header.vue  Hello.vue  Hero.vue
app/public/: index.html
app/src/: App.module.scss  App.tsx  App.vue  env.d.ts  index.css  index.tsx  main.css  main.js  main.ts  main.tsx  store.ts  types.d.ts
app/src/assets/font-awesome/: fa.css
app/src/components/: Fluss.vue  Input.vue  Layers.vue  Panel.vue  Toolbar.vue
app/src/context/: app-state.tsx  settings.tsx  wasm-api.tsx  widgets.tsx
app/src/panels/: Details.module.scss  Details.tsx  Layers.module.scss  Layers.tsx  Toolbar.module.scss  Toolbar.tsx
app/src/utils/: cookie-portal.ts  proxy-storage.ts
app/src/widgets/: DetailsInput.module.scss  DetailsInput.tsx  ToolbarButton.module.scss  ToolbarButton.tsx  ToolbarLink.tsx  ToolbarSwitch.tsx
app/types/: static.d.ts
assets/: canvas_bg.53af7cb5.wasm  canvas_bg.db14160a.wasm  canvas_bg.dd24a9b7.wasm  canvas_bg.f9589970.wasm  fluss_app_bg.e05f91f7.wasm  fluss_bg.1b0173dc.wasm  fluss_bg.b5b5b32b.wasm  index.0fd15833.js  index.1965d194.css  index.1d2f9da1.css  index.422fd96c.css  index.687ed22d.js  index.772b2a3d.js  index.78e2ec7a.css  index.92fc0283.js  index.b425a2b3.js  index.ca130911.js  index.d525f39b.js  index.e31f3879.js  vendor.6495f306.js  vendor.736fa499.js
canvas/: Cargo.toml
canvas/src/widgets/: cursor.rs  rect.rs  smiley.rs  utils.rs
ci_temp/: Dockerfile  gitlab-ci.yml
ci_temp/github/: build.yml
fluss/: Cargo.toml  Makefile
fluss/src/: lib.rs
fluss/src/widgets/: cursor.rs  smiley.rs
gpx/: Cargo.toml  dev.sh
gpx/src/: lib.rs
pkg/: fluss_app.js
wasm/: Cargo.toml  Makefile  build.sh
wasm/src/: lib.rs
wasm/src/widgets/: cursor.rs  mod.rs  rect.rs  smiley.rs  utils.rs
