[package]
name = "canvas"
version = "0.1.0"
description = "Experimental GPX Editor - Canvas"
authors = ["Cédric Eberhardt <hello+code@cedeber.fr>"]
edition = "2018"
resolver = "2" # remove it for edition 2021

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
incremental = true # Sould be automatic with Rust 1.52?

[profile.release]
lto = true
opt-level = 's'

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = { version = "0.2.76", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
nalgebra = { version = "0.29.0", features = ["serde-serialize"] }
ncollide2d = "0.32.0"
piet = "0.4.0"
piet-web = "0.4.0"
piet-svg = "0.4.0"
seed = "0.8.0"
uuid = { version = "0.8.2", features = ["wasm-bindgen", "v4"] }
enclose = "1.1.8"
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.66"
