[package]
name = "canvas"
version = "0.1.0"
description = "Experimental GPX Editor - Canvas"
authors = ["Cédric Eberhardt <hello+code@cedeber.fr>"]
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 's'

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
nalgebra = { version = "0.30.1", features = ["serde-serialize"] }
parry2d = "0.8.0"
piet = "0.5.0"
piet-web = "0.5.0"
piet-svg = "0.5.0"
seed = "0.8.0"
uuid = { version = "0.8.2", features = ["wasm-bindgen", "v4"] }
enclose = "1.1.8"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
ncollide2d = "0.33.0"
