[package]
name = "gpx"
version = "0.1.0"
description = "Experimental GPX Editor - GPX"
authors = ["Cédric Eberhardt <hello+code@cedeber.fr>"]
edition = "2018"
resolver = "2" # remove it for edition 2021

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
incremental = true # Sould be automatic with Rust 1.52?

[profile.release]
lto = true
opt-level = 's'

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = { version = "0.2.76", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
