[package]
name = "fluss-app"
version = "0.1.0"
description = "UI Design Application with Motion"
authors = ["Cédric Eberhardt <hi@eukolia.design>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[profile.release]
# lto = true
# opt-level = 's'

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = { version = "0.2.68", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
nalgebra = { version = "0.22.0", features = ["serde-serialize"] }
ncollide2d = "0.24.0"
piet = "0.2.0-pre3"
piet-web = "0.2.0-pre3"
piet-svg = "0.2.0-pre3"
seed = "0.7.0"
uuid = { version = "0.8.1", features = ["wasm-bindgen", "v4"] }
enclose = "1.1.8"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
